test/e2e/ingress/test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: follow
spec:
  selector:
    matchLabels:
      app: follow
  template:
    metadata:
      labels:
        app: follow
      annotations:
        multicluster.admiralty.io/elect: ""
    spec:
      containers:
        - name: hello-world
          image: adamgolab/hello-world
          env:
            - name: PORT
              value: "80"
            - name: WORLD
              valueFrom:
                fieldRef:
                  fieldPath: spec.nodeName
          ports:
            - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: follow-not
spec:
  selector:
    matchLabels:
      app: follow-not
  template:
    metadata:
      labels:
        app: follow-not
    spec:
      containers:
        - name: hello-world
          image: adamgolab/hello-world
          env:
            - name: PORT
              value: "80"
            - name: WORLD
              valueFrom:
                fieldRef:
                  fieldPath: spec.nodeName
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: follow
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: follow
---
apiVersion: v1
kind: Service
metadata:
  name: follow-not
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: follow-not
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: follow
spec:
  rules:
    - host: follow.foo.bar.baz
      http:
        paths:
          - path: /*
            pathType: Prefix
            backend:
              service:
                name: follow
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: follow-not
spec:
  rules:
    - host: follow-not.foo.bar.baz
      http:
        paths:
          - path: /*
            pathType: Prefix
            backend:
              service:
                name: follow-not
                port:
                  number: 80
